--- a/index.html
+++ b/index.html
@@ -1,10 +1,83 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>NILnomics</title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NILnomics</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #ffffff;
+      color: #0f2d2d;
+    }
+    header {
+      background-color: #0f2d2d;
+      color: #ffffff;
+      padding: 20px;
+      text-align: center;
+    }
+    .logo {
+      max-width: 250px;
+      margin: 0 auto;
+    }
+    main {
+      padding: 40px 20px;
+      text-align: center;
+    }
+    footer {
+      margin-top: 50px;
+      padding: 20px 0;
+      background-color: #e6f2e6;
+      border-top: 2px solid #0f2d2d;
+      text-align: center;
+      font-family: sans-serif;
+    }
+    footer a {
+      color: #0f2d2d;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
+    footer p {
+      margin: 6px 0;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="NILnomics_Logo_SomeText.png" alt="NILnomics Logo" class="logo">
     <h1>Welcome to NILnomics</h1>
-    <p>Home of college sports finance insights, visuals, and data.</p>
-  </body>
+    <p>Data-driven insights into the world of college sports finance</p>
+  </header>
+
+  <main>
+    <h2>Coming Soon</h2>
+    <p>The NILnomics newsletter is your go-to source for data, trends, and analysis in the college athletics Name, Image, and Likeness (NIL) era. Stay tuned for updates!</p>
+  </main>
+
+  <footer>
+    <p style="font-size: 18px; font-weight: bold; margin-bottom: 10px;">📬 Stay Connected with NILnomics</p>
+
+    <p>
+      <a href="https://x.com/NILnomics" target="_blank">Twitter/X</a> |
+      <a href="https://bsky.app/profile/nilnomics.bsky.social" target="_blank">Bluesky</a> |
+      <a href="https://www.kaggle.com/nilnomics" target="_blank">Kaggle</a>
+    </p>
+
+    <p>
+      <a href="https://nils-newsletter-dcd4b7.beehiiv.com/" target="_blank">Newsletter Home</a> |
+      <a href="https://nils-newsletter-dcd4b7.beehiiv.com/subscribe" target="_blank">Subscribe</a>
+    </p>
+
+    <p>
+      📩 <a href="mailto:NILnomics@gmail.com">NILnomics@gmail.com</a>
+    </p>
+
+    <p style="font-size: 12px; color: #666; margin-top: 12px;">© 2025 NILnomics. All rights reserved.</p>
+  </footer>
+</body>
 </html>
