--- a/index.html
+++ b/index.html
@@ -110,15 +110,30 @@
 
   <section class="sections">
     <div class="card">
-      <h3><a href="https://newsletter.nilnomics.com" target="_blank">📰 Latest Newsletter</a></h3>
+      <h3><a href="https://newsletter.nilnomics.com" target="_blank">💻 Code and Scripts</a></h3>
+      <p>Reproducible R scripts behind every NILnomics analysis. Built for transparency, reuse, and digging deeper into the business of college sports.</p>
+    </div>
+    <div class="card">
+      <h3><a href="https://www.kaggle.com/nilnomics" target="_blank">.📊 Data Sets</a></h3>
+      <p>Cleaned and curated NCAA finance data — from revenue breakdowns to sport-specific stats. Ready for charts, dashboards, and your own research.</p>
+    </div>
+    <div class="card">
+      <h3><a href="https://github.com/NILnomics" target="_blank">📚 FOIA Library</a></h3>
+      <p>A growing archive of public records requests and responses from athletic departments across the country. Original PDFs, summaries, and key takeaways.</p>
+    </div>
+  </section>
+  
+    <section class="sections">
+    <div class="card">
+      <h3><a href="https://newsletter.nilnomics.com" target="_blank">📰 Article - 4/24/2025</a></h3>
       <p>Read the most recent issue packed with analysis and visuals.</p>
     </div>
     <div class="card">
-      <h3><a href="https://www.kaggle.com/nilnomics" target="_blank">📂 NCAA Revenue Tools</a></h3>
+      <h3><a href="https://www.kaggle.com/nilnomics" target="_blank">📂 Article 2</a></h3>
       <p>Explore dashboards, CSVs, and scraping code on Kaggle.</p>
     </div>
     <div class="card">
-      <h3><a href="https://github.com/NILnomics" target="_blank">📚 Research & Code</a></h3>
+      <h3><a href="https://github.com/NILnomics" target="_blank">📚 Article 3</a></h3>
       <p>Dive into FOIA requests, R scripts, and working papers on GitHub.</p>
     </div>
   </section>
