--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   
     <section class="sections">
     <div class="card">
-      <h3><a href="https://newsletter.nilnomics.com" target="_blank">📰 Article - 4/24/2025</a></h3>
+      <h3><a href="https://newsletter.nilnomics.com" target="_blank">📰 📌 Latest: House of Cards - 4/24/2025</a></h3>
       <p>Read the most recent issue packed with analysis and visuals.</p>
     </div>
     <div class="card">
