Front page edits

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: #0f2d2d;
     }
     header {
-      background-color: #0f2d2d;
+      background-color: #189339;
       color: #ffffff;
       padding: 40px 20px;
       text-align: center;
@@ -35,7 +35,7 @@
       margin-bottom: 20px;
     }
     .cta-button {
-      background-color: #0f2d2d;
+      background-color: #189339;
       color: white;
       padding: 12px 24px;
       font-size: 1em;
@@ -99,7 +99,7 @@
   <header>
     <img src="NILnomics_Logo_SomeText.png" alt="NILnomics Logo" class="logo">
     <h1>Welcome to NILnomics</h1>
-    <p>Data-driven insights into the world of college sports finance</p>
+    <p>NILnomics is an independent, data-driven newsletter uncovering the real numbers behind college sports finances with sharp insights, clear visuals, and exclusive datasets.</p>
   </header>
 
   <section class="hero">
@@ -110,26 +110,26 @@
 
   <section class="sections">
     <div class="card">
-      <h3><a href="https://newsletter.nilnomics.com" target="_blank">💻 Code and Scripts</a></h3>
+      <h3><a href="https://github.com/NILnomics" target="_blank">💻 Code and Scripts</a></h3>
       <p>Reproducible R scripts behind every NILnomics analysis. Built for transparency, reuse, and digging deeper into the business of college sports.</p>
     </div>
     <div class="card">
-      <h3><a href="https://www.kaggle.com/nilnomics" target="_blank">.📊 Data Sets</a></h3>
+      <h3><a href="https://www.kaggle.com/nilnomics" target="_blank">📊 Data Sets</a></h3>
       <p>Cleaned and curated NCAA finance data — from revenue breakdowns to sport-specific stats. Ready for charts, dashboards, and your own research.</p>
     </div>
     <div class="card">
-      <h3><a href="https://github.com/NILnomics" target="_blank">📚 FOIA Library</a></h3>
+      <h3><a href="https://drive.google.com/drive/folders/1QWn78Q92IGWYOcLjuJFsmAnggrDv-glH?usp=sharing" target="_blank">📚 FOIA Library</a></h3>
       <p>A growing archive of public records requests and responses from athletic departments across the country. Original PDFs, summaries, and key takeaways.</p>
     </div>
   </section>
   
     <section class="sections">
     <div class="card">
-      <h3><a href="https://newsletter.nilnomics.com" target="_blank">📰 📌 Latest: House of Cards - 4/24/2025</a></h3>
+      <h3><a href="https://newsletter.nilnomics.com" target="_blank">📌 Latest: House of Cards - 4/24/2025</a></h3>
       <p>Read the most recent issue packed with analysis and visuals.</p>
     </div>
     <div class="card">
-      <h3><a href="https://www.kaggle.com/nilnomics" target="_blank">📂 Article 2</a></h3>
+      <h3><a href="https://www.kaggle.com/nilnomics" target="_blank">📚 Article 2</a></h3>
       <p>Explore dashboards, CSVs, and scraping code on Kaggle.</p>
     </div>
     <div class="card">
