Updated logo and webpage

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       color: #0f2d2d;
     }
     header {
-      background-color: #189339;
-      color: #ffffff;
+      background-color: #ffffff;
+      color: #black;
       padding: 40px 20px;
       text-align: center;
     }
@@ -49,7 +49,7 @@
       justify-content: center;
       padding: 40px 20px;
       gap: 30px;
-      background-color: #f9f9f9;
+      background-color: #189339;
     }
     .card {
       background: white;
@@ -102,11 +102,6 @@
     <p>NILnomics is an independent, data-driven newsletter uncovering the real numbers behind college sports finances with sharp insights, clear visuals, and exclusive datasets.</p>
   </header>
 
-  <section class="hero">
-    <h1>Understand the Business of College Sports</h1>
-    <p>Explore stories, tools, and visuals built from real data to explain the NIL era of college athletics.</p>
-    <a class="cta-button" href="https://newsletter.nilnomics.com" target="_blank">Go to the Newsletter</a>
-  </section>
 
   <section class="sections">
     <div class="card">
@@ -115,11 +110,11 @@
     </div>
     <div class="card">
       <h3><a href="https://www.kaggle.com/nilnomics" target="_blank">📊 Data Sets</a></h3>
-      <p>Cleaned and curated NCAA finance data — from revenue breakdowns to sport-specific stats. Ready for charts, dashboards, and your own research.</p>
+      <p>Cleaned and curated data behind all NILnomics' analysis. From revenue breakdowns to sport-specific stats. Ready for charts, dashboards, and your own research.</p>
     </div>
     <div class="card">
       <h3><a href="https://drive.google.com/drive/folders/1QWn78Q92IGWYOcLjuJFsmAnggrDv-glH?usp=sharing" target="_blank">📚 FOIA Library</a></h3>
-      <p>A growing archive of public records requests and responses from athletic departments across the country. Original PDFs, summaries, and key takeaways.</p>
+      <p>A growing archive of documents from public records requests to athletic departments across the country. Original PDFs sorted by institution and category for your convenience.</p>
     </div>
   </section>
   
@@ -129,23 +124,18 @@
       <p>Read the most recent issue packed with analysis and visuals.</p>
     </div>
     <div class="card">
-      <h3><a href="https://www.kaggle.com/nilnomics" target="_blank">📚 Article 2</a></h3>
-      <p>Explore dashboards, CSVs, and scraping code on Kaggle.</p>
+      
     </div>
     <div class="card">
-      <h3><a href="https://github.com/NILnomics" target="_blank">📚 Article 3</a></h3>
-      <p>Dive into FOIA requests, R scripts, and working papers on GitHub.</p>
+      
     </div>
   </section>
 
-  <section class="about">
-    <h2>About NILnomics</h2>
-    <p>NILnomics is a solo project by a higher ed finance professional and researcher who digs into the data behind college sports. Using public records, open-source code, and storytelling, NILnomics helps you understand the financial forces reshaping college athletics.</p>
-  </section>
 
   <section class="hero">
     <p style="margin-bottom: 10px; font-weight: bold; font-size: 1.1em;">Subscribe and never miss a story</p>
-    <a class="cta-button" href="https://newsletter.nilnomics.com/subscribe" target="_blank">Subscribe to Newsletter</a>
+    <br>
+    <a class="cta-button" href="https://newsletter.nilnomics.com/subscribe" target="_blank">Subscribe to the Newsletter</a>
   </section>
 
   <footer>
