Fixed the subscribe button

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <section class="hero">
     <p style="margin-bottom: 10px; font-weight: bold; font-size: 1.1em;">Subscribe and never miss a story</p>
     <br>
-    <a class="cta-button" href="https://newsletter.nilnomics.com/subscribe" target="_blank">Subscribe to the Newsletter</a>
+    <a class="cta-button" href="https://newsletter.nilnomics.com/subscribe" target="_blank">Subscribe</a>
   </section>
 
   <footer>
