First issue live!

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
   
     <section class="sections">
     <div class="card">
-      <h3><a href="https://newsletter.nilnomics.com" target="_blank">📌 Latest: House of Cards - 4/24/2025</a></h3>
-      <p>Read the most recent issue packed with analysis and visuals.</p>
+      <h3><a href="https://www.newsletter.nilnomics.com/p/house-of-cards-2f4b" target="_blank">📌 Latest: House of Cards - 4/24/2025</a></h3>
+      <p>The first issue is live! Roster limit analysis, top 10 revenue schools, and Frozen Four insights.</p>
     </div>
     <div class="card">
       
