--- a/index.html
+++ b/index.html
@@ -125,9 +125,10 @@
     </div>
 
     <div class="card">
-      <h3><a href="https://www.newsletter.nilnomics.com/p/house-of-cards-2f4b" target="_blank">📌 Latest: House of Cards - 5/9/2025</a></h3>
+      <h3><a href="https://www.newsletter.nilnomics.com/p/house-of-cards-2f4b" target="_blank">Issue 1: House of Cards - 5/9/2025</a></h3>
       <p>The first issue is live! Roster limit analysis, top 10 revenue schools, and Frozen Four insights.</p>
     </div>
+    
     <div class="card">
   </section>
 
